Bug 374389 - Title of document tab/subwindow is not updated after changing document title
Summary: Title of document tab/subwindow is not updated after changing document title
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 3.1.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-12-31 10:29 UTC by Nicholas LaPointe
Modified: 2017-02-07 09:07 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicholas LaPointe 2016-12-31 10:29:58 UTC
After changing the document title from the Document Information dialog, the text on the tab or subwindow title will remain unchanged.
Comment 1 Dmitry Kazakov 2017-02-07 09:02:42 UTC
Git commit f6583b7c239f29020dde9bcbb871c27fc380087c by Dmitry Kazakov, on behalf of Raphael Cojocaru.
Committed on 07/02/2017 at 09:02.
Pushed by dkazakov into branch 'master'.

Solved the "Title of document tab/subwindow is not updated after changing document title" bug

Summary: The issue was that when the current document title
was changed (by using Document Information dialog for example),
its name shown in the files tab remained the same, without
being updated. I searched for the method which should update
the document name and called it.

Reviewers: #krita, dkazakov
Differential Revision: https://phabricator.kde.org/D4462


https://commits.kde.org/krita/f6583b7c239f29020dde9bcbb871c27fc380087c
Comment 2 Dmitry Kazakov 2017-02-07 09:07:03 UTC
Git commit 5422ae3f773d51de9687f88002684ba80f02a0d7 by Dmitry Kazakov, on behalf of Raphael Cojocaru.
Committed on 07/02/2017 at 09:06.
Pushed by dkazakov into branch 'krita/3.1'.

Solved the "Title of document tab/subwindow is not updated after changing document title" bug

Summary: The issue was that when the current document title
was changed (by using Document Information dialog for example),
its name shown in the files tab remained the same, without
being updated. I searched for the method which should update
the document name and called it.

Reviewers: #krita, dkazakov
Differential Revision: https://phabricator.kde.org/D4462

M  +1    -0    libs/ui/KisMainWindow.cpp

https://commits.kde.org/krita/5422ae3f773d51de9687f88002684ba80f02a0d7