Solved the "Title of document tab/subwindow is not updated after changing document title" bug

Summary: The issue was that when the current document title
was changed (by using Document Information dialog for example),
its name shown in the files tab remained the same, without
being updated. I searched for the method which should update
the document name and called it.

BUG:374389

Reviewers: #krita, dkazakov
Differential Revision: https://phabricator.kde.org/D4462