libs/ui/KisMainWindow.cpp
@@ -2016,6 +2016,7 @@ void KisMainWindow::setToolbarList(QList<QAction *> toolbarList)
 
 void KisMainWindow::slotDocumentTitleModified(const QString &caption, bool mod)
 {
+    updateCaption();
     updateCaption(caption, mod);
     updateReloadFileAction(d->activeView ? d->activeView->document() : 0);
 }
